--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@huggingface/inference": "^2.6.4",
     "@mui/material": "^5.14.19",
+    "@mui/x-data-grid": "^6.18.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
